jena-shex/src/test/files/spec/negativeStructure/includeSimpleShape.shex
# Inclusion <http://a.example/S1> is not a TripleExpression.
<http://a.example/S> {
  &<http://a.example/S1>;
  <http://a.example/p1> .
}

<http://a.example/S1> {
  <http://a.example/p2> .
}

